# RDP

./: .gitignore  .gitmodules  1  1.cpp  Cargo.toml  Compare.md  FUNCTIONS_GUIDE.md  FUNCTIONS_SYSTEM_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS_SUMMARY.md  PROGRESS_UPDATE_2026_02_27.md  PriorityZero.md  README.md  REFACTOR_PLAN.md  SSA_DESIGN.md  TODO.md  build.rs  build_errors.txt  debug_arithmetic.rs  err.txt  fix_all_imports.py  fix_imports.py  out.txt  test.rs  test.sh  test_background.rs  test_basic.rs  test_basic.sh  test_break_continue.sh  test_builtins.rs  test_builtins.sh  test_comprehensive.sh  test_control.sh  test_enhanced_lexer.rs  test_expansion.rs  test_func_basic.sh  test_func_call_only.sh  test_func_minimal.sh  test_func_noop.sh  (+35 more)
PLAN/: ARCHITECTURE_REFACTOR_PLAN.md  BUG_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  P1_5_PIPELINE_IMPLEMENTATION.md  POSIX 23个必选信号（Windows兼容版）.md  POSIX23个必选信号（Windows兼容版）.md  WORK_PLAN_20260228.md  plan.md  session.db  信号总线.md  命令行参数.md  基础细节.md  执行总纲.md  执行计划.md  标准计划书.md
color_rs/: Cargo.toml
color_rs/src/: colors.rs  lib.rs  rich.rs
src/: ast_new.rs  builtins.rs  enhanced_lexer.rs  enhanced_lexer_tests.rs  env.rs  executor.rs  ir.rs  ir_generator.rs  ir_generator_old.rs  ir_old.rs  lexer.rs  lib.rs  main.rs  main_enhanced.rs  main_ssa.rs  optimizer.rs  parser.rs  renamedir.py  ssa_executor.rs  ssa_ir_generator.rs  ssa_tests.rs  tokens.rs
tests/: integration_test.rs  test_control_structures.rs  test_if.rs  test_if_simple.rs  test_loops.rs  test_pipeline.rs  test_pipeline_basic.rs  test_simple.rs  test_ssa.rs  (+3 more)
(+88 files in other folders)
