[package]
name = "color_rs"
description = "Rust Colorful Library, Inspired by Python Rich."
version = "0.0.1"
edition = "2024"
authors = ["星灿长风v(StarWindv)"]
homepage = "https://github.com/starwindv/rdp/color_rs"
license = "GPL-3"

[dependencies]
chrono = "0.4.44"
lazy_static = "1.5.0"
regex = "1.12.3"
thiserror = "2.0.18"
